--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio de Iván</title>
+    <title>Portfolio de Iv&aacute;n</title>
   </head>
   <body>
+    <a href="#main-content" class="skip-link">Saltar al contenido principal</a>
     <div id="app"></div>
+    <noscript>Este sitio necesita JavaScript para funcionar correctamente.</noscript>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
